--- a/index.html
+++ b/index.html
@@ -8,16 +8,22 @@
 		<script src="timer.js"></script>
 	</head>
 	<body>
-		<header>
-			<div class="inner">
-				Dear ry, we have fallen in love for 
-				<div class="timer">
-					<span id="day"></span> Days
-					<span id="hour"></span> Hours
-					<span id="minute"></span> Minutes
-					<span id="second"></span> Seconds
+		<div id="main">		
+			<header>
+				<div class="inner">
+					Dear ry, we have fallen in love for 
+					<div class="timer">
+						<span id="day"></span> Days
+						<span id="hour"></span> Hours
+						<span id="minute"></span> Minutes
+						<span id="second"></span> Seconds
+					</div>
 				</div>
-			</div>
-		</header>
+			</header>
+			<footer>
+				View it on <a href="https://github.com/SFantasy/Anniversary">GitHub</a> | 
+				Designed by <a href="https://twitter.com/forFantasy">Fantasy</a>
+			</footer>
+		</div>
 	</body>
 </html>
