--- a/index.html
+++ b/index.html
@@ -1,4 +1,13 @@
 <!doctype html>
+<!-- 
+    ____       ________    __    ___   _________
+   |   |      |        |  |  |  /  /  |   ______|
+   |   |      |        |  |  | /  /   |   |______
+   |   |____  |        |  |  |/  /    |   _______\
+   |_______|  |________|  |_____/     |   |_______
+                                      |___________\
+
+-->
 <html>
 	<head>
 		<title>L.O.V.E</title>
@@ -20,6 +29,7 @@
 					</div>
 				</div>
 			</header>
+			<canvas id="heart"></canvas>
 			<footer>
 				View it on <a href="https://github.com/SFantasy/Anniversary">GitHub</a> | 
 				Designed by <a href="https://twitter.com/forFantasy">Fantasy</a>
