add an empty canvas

--- a/index.html
+++ b/index.html
@@ -29,7 +29,9 @@
 					</div>
 				</div>
 			</header>
-			<canvas id="heart"></canvas>
+			<canvas id="heart">
+				<!-- What should I draw on this canvas? -->
+			</canvas>
 			<footer>
 				View it on <a href="https://github.com/SFantasy/Anniversary">GitHub</a> | 
 				Designed by <a href="https://twitter.com/forFantasy">Fantasy</a>
