Fix the position of JavaScript in the document

--- a/index.html
+++ b/index.html
@@ -14,6 +14,10 @@
 		<meta charset="utf-8">
 		<meta name="author" content="SFantasy">
 		<link rel="stylesheet" href="stylesheet.css">
+		<!-- I must put the javascript here -->
+		<script src="jquery.js"></script>
+		<script src="timer.js"></script>
+		<script src="functions.js"></script>
 	</head>
 	<body>
 		<div id="main">		
@@ -59,9 +63,6 @@
 			</footer>
 		</div>
 	</body>
-	<script src="jquery.js"></script>
-	<script src="timer.js"></script>
-	<script src="functions.js"></script>
 	<script>
 		$('#code').typewriter();
 	</script>
