Update sentences in the page

--- a/index.html
+++ b/index.html
@@ -45,16 +45,17 @@
 					<span class="comments">;; We are strangers, 2010</span><br>
 					(<span class="keywords">defvar</span> *love* nil)<br>
 					<span class="comments">;; I met you several times</span><br>
-					<span class="comments">;; We flied kites, we played games</span><br>
-					<span class="comments">;; We added love factors into our hearts</span><br>
+					<span class="comments">;; We flied kites, we played games, we went out dating...</span><br>
+					<span class="comments">;; So we added love factors into our hearts</span><br>
 					(<span class="keywords">loop</span> (<span class="keywords">add-love-factor</span><br>
-					&nbsp&nbsp(<span class="keywords">if</span> (<span class="keywords">not</span> <span class="keywords">y-or-n-p</span> "add more? [y/n]: "))<br>&nbsp&nbsp&nbsp&nbsp(<span class="keywords">return</span>)<br>&nbsp&nbsp&nbsp&nbsp(<span class="keywords">push</span> factors *love*)))<br>
-					<span class="comments">;; Do you love me? Ry.</span><br>
-					(<span class="keywords">format t</span> "Do you?")<br>
+					&nbsp&nbsp(<span class="keywords">if</span> (<span class="keywords">not</span> <span class="keywords">y-or-n-p</span> "add more? [y/n]: "))<br>&nbsp&nbsp&nbsp&nbsp<span class="comments">;;( return)</span><br>&nbsp&nbsp&nbsp&nbsp(<span class="keywords">push</span> factors *love*)))<br>
+					<span class="comments">;; Hesitated...</span><br>
+					<span class="comments">;; Be brave, boy~!</span><br>
+					(<span class="keywords">format t</span> "Do you love me, Ry?")<br>
 					<span class="comments">;; Yeah~!</span><br>
 					(<span class="keywords">with-you-accept</span><br>
 					&nbsp&nbsp(<span class="keywords">be-together</span> you me))<br>
-					<span class="comments">;; So the story began...</span>
+					<span class="comments">;; So the journey began...</span>
 				</div>
 			</div>
 			<footer>
