--- a/index.html
+++ b/index.html
@@ -1,23 +1,21 @@
 <!doctype html>
 <!-- 
-    ____       ________    __    ___   _________
-   |   |      |        |  |  |  /  /  |   ______|
-   |   |      |        |  |  | /  /   |   |______
-   |   |____  |        |  |  |/  /    |   _______\
-   |_______|  |________|  |_____/     |   |_______
-                                      |___________\
-
+ _     _____     _______ 
+| |   / _ \ \   / / ____|
+| |  | | | \ \ / /|  _|  
+| |__| |_| |\ V / | |___ 
+|_____\___/  \_/  |_____|
 -->
 <html>
 	<head>
 		<title>L.O.V.E</title>
 		<meta charset="utf-8">
 		<meta name="author" content="SFantasy">
-		<link rel="stylesheet" href="stylesheet.css">
+		<link rel="stylesheet" href="css/stylesheet.css">
 		<!-- I must put the javascript here -->
-		<script src="jquery.js"></script>
-		<script src="timer.js"></script>
-		<script src="functions.js"></script>
+		<script src="js/jquery.js"></script>
+		<script src="js/timer.js"></script>
+		<script src="js/functions.js"></script>
 	</head>
 	<body>
 		<div id="main">		
