add several time nodes

--- a/timeline/index.html
+++ b/timeline/index.html
@@ -38,6 +38,9 @@
                 height: '600',
                 source: './timeline.jsonp',
                 embed_id: 'timeline',
+                start_zoom_adjust: '3',
+                hash_bookmark: true,
+                debug: false,
                 lang: 'zh-cn',
                 font: 'Bevan-PotanoSans'
             };
