use Qiniu CDN, it is nice to use it

--- a/timeline/index.html
+++ b/timeline/index.html
@@ -48,7 +48,7 @@
         <script src="http://cdn.knightlab.com/libs/timeline/latest/js/storyjs-embed.js"></script>
         <!-- 简单爱 by Jay Chow -->
         <audio style="display: none;" autoplay loop>
-            <source src="http://zhangmenshiting.baidu.com/data2/music/10741073/1073644472000128.mp3?xcode=91c2ea8c818a81e123077e945efa66dc879bf06e8c130ee5&song_id=10736444"></source>
+            <source src="http://fantasyshao-timeline.qiniudn.com/jiandanai.mp3"></source>
         </audio>
     </article>
     <footer>
