[update] index.html add timeline in the footer

--- a/index.html
+++ b/index.html
@@ -57,7 +57,8 @@
 				</div>
 			</div>
 			<footer>
-				View it on <a href="https://github.com/SFantasy/Anniversary">GitHub</a> | 
+				View it on <a href="https://github.com/SFantasy/Anniversary">GitHub</a> |
+				Visit our <a href="timeline">timeline</a> |
 				Designed by <a href="https://twitter.com/forFantasy">Fantasy</a>
 			</footer>
 		</div>
