Change words since you are not in love with me any more. But I am here as always.

--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
 <!doctype html>
-<!-- 
- _     _____     _______ 
+<!--
+ _     _____     _______
 | |   / _ \ \   / / ____|
-| |  | | | \ \ / /|  _|  
-| |__| |_| |\ V / | |___ 
+| |  | | | \ \ / /|  _|
+| |__| |_| |\ V / | |___
 |_____\___/  \_/  |_____|
 -->
 <html>
@@ -18,10 +18,10 @@
 		<script src="js/functions.js"></script>
 	</head>
 	<body>
-		<div id="main">		
+		<div id="main">
 			<header>
 				<div class="inner">
-					Dear ry, we have fallen in love for 
+					Dear Ry, I have fallen in love with you for 
 					<div class="timer">
 						<span id="day"></span> Days
 						<span id="hour"></span> Hours
@@ -33,7 +33,7 @@
 			<canvas id="heart">
 				<!-- What should I draw on this canvas? -->
 			</canvas>
-			<!-- Tell you a brief story using code?! :) 
+			<!-- Tell you a brief story using code?! :)
 				 I have just learnt a little Common Lisp days ago.
 				 Hey! The code below may not pass the compilation...WTF
 		    -->
