Update some static files.

--- a/timeline/index.html
+++ b/timeline/index.html
@@ -1,14 +1,15 @@
 <!doctype html>
-<html><!--
- ______      __                                  ____                
-/\__  _\    /\ \                                /\  _`\              
-\/_/\ \/    \ \ \        ___   __  __     __    \ \ \L\ \  __  __    
-   \ \ \     \ \ \  __  / __`\/\ \/\ \  /'__`\   \ \ ,  / /\ \/\ \   
-    \_\ \__   \ \ \L\ \/\ \L\ \ \ \_/ |/\  __/    \ \ \\ \\ \ \_\ \  
-    /\_____\   \ \____/\ \____/\ \___/ \ \____\    \ \_\ \_\/`____ \ 
+<html>
+<!--
+ ______      __                                  ____
+/\__  _\    /\ \                                /\  _`\
+\/_/\ \/    \ \ \        ___   __  __     __    \ \ \L\ \  __  __
+   \ \ \     \ \ \  __  / __`\/\ \/\ \  /'__`\   \ \ ,  / /\ \/\ \
+    \_\ \__   \ \ \L\ \/\ \L\ \ \ \_/ |/\  __/    \ \ \\ \\ \ \_\ \
+    /\_____\   \ \____/\ \____/\ \___/ \ \____\    \ \_\ \_\/`____ \
     \/_____/    \/___/  \/___/  \/__/   \/____/     \/_/\/ /`/___/> \
                                                                /\___/
-                                                               \/__/ 
+                                                               \/__/
 -->
 <head>
     <meta charset="UTF-8">
