--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 		<title>L.O.V.E</title>
 		<meta charset="utf-8">
 		<meta name="author" content="SFantasy">
+		<meta name="description" content="I love you, forever and ever."/>
 		<link rel="stylesheet" href="css/stylesheet.css">
 		<!-- I must put the javascript here -->
 		<script src="js/jquery.js"></script>
@@ -56,6 +57,10 @@
 					<span class="comments">;; So the journey began...</span>
 				</div>
 			</div>
+			<audio style="display: none;" autoplay loop>
+				<source src="http://fantasyshao.qiniudn.com/yueding-eason.mp3" />
+				<source src="http://fantasyshao.qiniudn.com/turanhaoxiangni.mp3" />
+			</audio>
 			<footer>
 				View it on <a href="https://github.com/SFantasy/Anniversary">GitHub</a> |
 				Visit our <a href="timeline">timeline</a> |
