Use staticfile insteand of the origin CDN address.

--- a/timeline/index.html
+++ b/timeline/index.html
@@ -21,7 +21,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0">
     <title>Timeline | { fantasyshao ❤ sceliay }</title>
     <script src="http://cdn.staticfile.org/jquery/1.7/jquery.min.js"></script>
-    <script src="http://cdn.knightlab.com/libs/timeline/latest/js/timeline-min.js?2.24"></script>
+    <script src="http://cdn.staticfile.org/timelinejs/2.32.0/js/timeline-min.js"></script>
     <link rel="stylesheet" href="./css/timeline.css">
 </head>
 <body>
@@ -46,7 +46,7 @@
                 font: 'Bevan-PotanoSans'
             };
         </script>
-        <script src="http://cdn.knightlab.com/libs/timeline/latest/js/storyjs-embed.js"></script>
+        <script src="http://cdn.staticfile.org/timelinejs/2.32.0/js/storyjs-embed.js"></script>
         <!-- 简单爱 by Jay Chow -->
         <audio style="display: none;" autoplay loop>
             <source src="http://fantasyshao-timeline.qiniudn.com/jiandanai.mp3"></source>
