Add two more timestamp.

--- a/timeline/index.html
+++ b/timeline/index.html
@@ -13,7 +13,7 @@
 -->
 <head>
     <meta charset="UTF-8">
-    <meta name="description" content="流动的光阴冲不淡，记忆的声音">
+    <meta name="description" content="Fantasy与Sceliay的Timeline">
     <meta name="keywords" content="memory love">
     <meta name="author" content="fantasyshao">
     <meta name="apple-mobile-web-app-capable" content="yes">
